--- a/app/src/main/res/layout/activity_patient_summary.xml
+++ b/app/src/main/res/layout/activity_patient_summary.xml
@@ -14,7 +14,7 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Dequeue Patient"
+        android:text="@string/dequeue_patient"
         android:id="@+id/dequeueButton"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
@@ -24,7 +24,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="emergency"
+        android:text="@string/emergency"
         android:id="@+id/emergency"
         android:layout_below="@+id/dequeueButton"
         android:layout_marginTop="13dp"
@@ -35,7 +35,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="pain"
+        android:text="@string/pain"
         android:id="@+id/pain"
         android:layout_below="@+id/emergency"
         android:layout_marginTop="5dp"
@@ -46,7 +46,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="fatigue"
+        android:text="@string/fatigue"
         android:id="@+id/fatigue"
         android:layout_below="@+id/pain"
         android:layout_marginTop="5dp"
@@ -57,7 +57,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="numbness"
+        android:text="@string/numbness"
         android:id="@+id/numbness"
         android:layout_below="@+id/fatigue"
         android:layout_marginTop="5dp"
@@ -68,7 +68,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="spasticity"
+        android:text="@string/spasticity"
         android:id="@+id/spasticity"
         android:layout_below="@+id/numbness"
         android:layout_marginTop="5dp"
@@ -79,7 +79,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="vision"
+        android:text="@string/vision"
         android:id="@+id/vision"
         android:layout_below="@+id/spasticity"
         android:layout_marginTop="5dp"
@@ -101,7 +101,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="bladder"
+        android:text="@string/bladder"
         android:id="@+id/bladder"
         android:layout_below="@+id/dizziness"
         android:layout_marginTop="5dp"
@@ -112,7 +112,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="cognitive"
+        android:text="@string/cognitive"
         android:id="@+id/cognitive"
         android:layout_below="@+id/bladder"
         android:layout_marginTop="5dp"
@@ -147,12 +147,12 @@
         android:paddingTop="10dp"
         android:paddingRight="0dp"
         android:paddingBottom="10dp"
-        android:hint="Comment for Patient" />
+        android:hint="@string/comments_for_patient" />
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Submit"
+        android:text="@string/submit"
         android:id="@+id/submitButton"
         android:layout_below="@+id/commentBox"
         android:layout_centerHorizontal="true"
