--- a/app/src/main/res/layout/activity_symptoms_summary.xml
+++ b/app/src/main/res/layout/activity_symptoms_summary.xml
@@ -15,7 +15,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="emergency"
+        android:text="@string/emergency"
         android:id="@+id/emergency"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
@@ -27,7 +27,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="pain"
+        android:text="@string/pain"
         android:id="@+id/pain"
         android:layout_below="@+id/emergency"
         android:layout_marginTop="10dp"
@@ -38,7 +38,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="fatigue"
+        android:text="@string/fatigue"
         android:id="@+id/fatigue"
         android:layout_below="@+id/pain"
         android:layout_marginTop="10dp"
@@ -49,7 +49,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="numbness"
+        android:text="@string/numbness"
         android:id="@+id/numbness"
         android:layout_below="@+id/fatigue"
         android:layout_marginTop="10dp"
@@ -60,7 +60,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="spasticity"
+        android:text="@string/spasticity"
         android:id="@+id/spasticity"
         android:layout_below="@+id/numbness"
         android:layout_marginTop="10dp"
@@ -71,7 +71,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="vision"
+        android:text="@string/vision"
         android:id="@+id/vision"
         android:layout_below="@+id/spasticity"
         android:layout_marginTop="10dp"
@@ -82,7 +82,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="dizziness"
+        android:text="@string/dizziness"
         android:id="@+id/dizziness"
         android:layout_below="@+id/vision"
         android:layout_marginTop="10dp"
@@ -93,7 +93,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="bladder"
+        android:text="@string/bladder"
         android:id="@+id/bladder"
         android:layout_below="@+id/dizziness"
         android:layout_marginTop="10dp"
@@ -104,7 +104,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="cognitive"
+        android:text="@string/cognitive"
         android:id="@+id/cognitive"
         android:layout_below="@+id/bladder"
         android:layout_marginTop="10dp"
@@ -115,7 +115,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="emotional"
+        android:text="@string/emotional"
         android:id="@+id/emotional"
         android:layout_below="@+id/cognitive"
         android:layout_marginTop="10dp"
@@ -126,7 +126,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Doctor's Comment:"
+        android:text="@string/doctors_comment"
         android:id="@+id/dComment"
         android:layout_below="@+id/emotional"
         android:layout_marginTop="20dp"
