new icon, patient display fixed, sorting
-new icon
-fixed the SymptomsListActivity and SymptomsListAdapter to display the
patient’s submission dates correctly
-the text box for the patient’s email in LoginActivity now expects the
user to input an email as opposed to just regular text (so the @ is
easier to access on the keyboard)
-doctor’s list of patients sorts with emergency patients on top

--- a/app/src/main/res/layout-v17/activity_login.xml
+++ b/app/src/main/res/layout-v17/activity_login.xml
@@ -22,7 +22,7 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:id="@+id/txtemail"
-        android:inputType="text"
+        android:inputType="textEmailAddress"
         android:hint="@string/hintemail"
         android:background="#ffffffff"
         android:paddingTop="10dp"
